Sun Mar  1 17:27:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (gfDebug): uncommented out.
	  [ruby-core:22600]

Sun Mar  1 16:15:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_waitpid): use wait_each() on no waitpid platforms.
	  [ruby-dev:38054]

Sun Mar  1 16:01:01 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_daemon): stops and restarts timer thread because
	  daemon(3) implies fork(2).  [ruby-dev:38055]

Fri Feb 27 22:02:34 2009  Tanaka Akira  <akr@fsij.org>

	* util.c: fix SEGV by test_time.rb with
	  gcc version 4.4.0 20090219 (Red Hat 4.4.0-0.21) on Fedora 11 Alpha.

Fri Feb 27 18:30:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (cdhash_type, iseq_set_sequence): should not call
	  methods of the argument of case, to keep the semantics of
	  case/when.  [ruby-dev:38079]

Fri Feb 27 18:01:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (ruby_get_stack_grow_direction): no needs to use thread
	  here, and not initialized yet.  [ruby-core:22439]

Fri Feb 27 17:45:25 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_load_ok): checks if regular file, except for the
	  platform disallows to open directories, e.g. dosish.
	  [ruby-dev:38097], [Bug #1221]

Wed Feb 25 12:27:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_force_encoding): should clear coderange at changing
	  encoding.  [ruby-core:22437]

Wed Feb 25 12:06:09 2009    <nobu@ruby-lang.org>

	* io.c (rb_io_getline_1): enables limit even if rs is given.
	  [ruby-core:22434]

Wed Feb 25 02:28:51 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_chomp_bang): coderange may change.
	  [ruby-core:22414]

Wed Feb 25 02:17:30 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_delete_bang): should recalculate coderange.
	  [ruby-talk:329267]

Tue Feb 24 19:01:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
